global count of quantity implemented

--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -1,5 +1,8 @@
 /* Empty. Add your own CSS if you like */
-<<<<<<< HEAD
+.card {
+	display: block;
+}
+
 .cardMainImage {
 	display: block;
 }
@@ -31,6 +34,17 @@
 
 .cardPrice {
 	margin-left: 20px;
+	/*margin-right: 20px;*/
+	margin-top: 15px;
+	display: inline;
+	float: left
 }
-=======
->>>>>>> 0444e9c558f702fa77d87865e5148fc6909c3dfe
+
+.cardIncrement {
+	display: inline;
+	float: left;
+}
+
+.cardQuantity {
+	font-size: 30px;
+}
