--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,6 +11,9 @@
 	display: block;
 }
 
+.body{
+	background-image: url('/loginback.jpg');
+}
 .cardTitleIcon {
 	height: 100px;
 	width:  100px;
@@ -47,4 +50,6 @@
 
 .cardQuantity {
 	font-size: 30px;
+
+
 }
